--- a/NeuralModel/NeuralModel.csproj
+++ b/NeuralModel/NeuralModel.csproj
@@ -45,7 +45,8 @@
   <ItemGroup>
     <Compile Include="Cell.cs" />
     <Compile Include="IActivationFunction.cs" />
-    <Compile Include="NetworkProperties.cs" />
+    <Compile Include="Layer.cs" />
+    <Compile Include="Network.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Signal.cs" />
