--- a/NeuralModel/NeuralModel.csproj
+++ b/NeuralModel/NeuralModel.csproj
@@ -44,12 +44,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="FirstLayer.cs" />
     <Compile Include="IActivationFunction.cs" />
     <Compile Include="IdentityFunction.cs" />
+    <Compile Include="ILayer.cs" />
     <Compile Include="Layer.cs" />
+    <Compile Include="OtherLayer.cs" />
     <Compile Include="LogisticFunction.cs" />
     <Compile Include="Network.cs" />
-    <Compile Include="NetworkContoller.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Signal.cs" />
